@@ -1,12 +1,0 @@
-[Unit]
-Description=Start ifupdown for %I
-BindTo=sys-subsystem-net-devices-%i.device
-ConditionPathExists=/etc/sysconfig/ifconfig.%i
-
-[Service]
-ExecStart=/sbin/ifup %I
-ExecStop=/sbin/ifdown %I
-RemainAfterExit=true
-
-[Install]
-WantedBy=multi-user.target
