@@ -36,6 +36,40 @@
     </listitem>
 -->
     <listitem>
+      <para>2014-07-08</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Removed references to /lib/udev/devices. Fixes
+          <ulink url="&lfs-ticket-root;3620">#3620</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to linux-3.15.4. Fixes
+          <ulink url="&lfs-ticket-root;3623">#3623</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Removed systemd references in bootscripts. Fixes
+          <ulink url="&lfs-ticket-root;3624">#3624</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Simlify lto instructions in chapter 6 gcc. Fixes
+          <ulink url="&lfs-ticket-root;3626">#3626</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update XML-Parser source location. Fixes
+          <ulink url="&lfs-ticket-root;3628">#3628</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to eudev-1.9. Fixes
+          <ulink url="&lfs-ticket-root;3630">#3630</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to kbd-2.0.2. Fixes
+          <ulink url="&lfs-ticket-root;3631">#3631</ulink>.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2014-07-02</para>
       <itemizedlist>
         <listitem>
