@@ -112,9 +112,9 @@
     <listitem>
       <para>IPRoute2 &iproute2-version;</para>
     </listitem>
-    <!--<listitem>
+    <listitem>
       <para>Kbd &kbd-version;</para>
-    </listitem>-->
+    </listitem>
     <listitem>
       <para>Kmod &kmod-version;</para>
     </listitem>
