@@ -147,10 +147,10 @@
 <!ENTITY e2fsprogs-ch6-du "64 MB">
 <!ENTITY e2fsprogs-ch6-sbu "1.7 SBU">
 
-<!ENTITY eudev-version "1.8">
-<!ENTITY eudev-size "1,716 KB">
+<!ENTITY eudev-version "1.9">
+<!ENTITY eudev-size "1,722 KB">
 <!ENTITY eudev-url "http://dev.gentoo.org/~blueness/eudev/eudev-&eudev-version;.tar.gz">
-<!ENTITY eudev-md5 "4520cf7ba2ec4be1bd0ac5ff75c8b315">
+<!ENTITY eudev-md5 "da8083b30b44177445b21e8299af23a1">
 <!ENTITY eudev-manpages-size "9 KB">
 <!ENTITY eudev-manpages-url "&anduin-other;eudev-&eudev-version;-manpages.tar.bz2">
 <!ENTITY eudev-manpages-md5 "9742236280dfc34ba034173efd69f5cf">
@@ -346,10 +346,10 @@
 <!ENTITY iproute2-ch6-du "7.3 MB">
 <!ENTITY iproute2-ch6-sbu "0.1 SBU">
 
-<!ENTITY kbd-version "2.0.1">
-<!ENTITY kbd-size "1,962 KB">
+<!ENTITY kbd-version "2.0.2">
+<!ENTITY kbd-size "2,105 KB">
 <!ENTITY kbd-url "https://www.kernel.org/pub/linux/utils/kbd/kbd-&kbd-version;.tar.gz">
-<!ENTITY kbd-md5 "e9f2b7046312c11cec9e52e22f307b6a">
+<!ENTITY kbd-md5 "ba56fb5bfd44acea83fc5dac4a9b7f15">
 <!ENTITY kbd-home "http://ftp.altlinux.org/pub/people/legion/kbd">
 <!ENTITY kbd-ch6-du "20 MB">
 <!ENTITY kbd-ch6-sbu "0.1 SBU">
@@ -370,7 +370,7 @@
 <!ENTITY less-ch6-du "3.6 MB">
 <!ENTITY less-ch6-sbu "less than 0.1 SBU">
 
-<!ENTITY lfs-bootscripts-version "20140511">              <!-- Scripts depend on this format -->
+<!ENTITY lfs-bootscripts-version "20140629">              <!-- Scripts depend on this format -->
 <!ENTITY lfs-bootscripts-size "BOOTSCRIPTS-SIZE KB">         <!-- Updated in Makefile -->
 <!ENTITY lfs-bootscripts-url "&downloads-root;lfs-bootscripts-&lfs-bootscripts-version;.tar.bz2">
 <!ENTITY lfs-bootscripts-md5 "BOOTSCRIPTS-MD5SUM">           <!-- Updated in Makefile -->
@@ -407,12 +407,12 @@
 
 <!ENTITY linux-major-version "3">
 <!ENTITY linux-minor-version "15">
-<!ENTITY linux-patch-version "1">
+<!ENTITY linux-patch-version "4">
 <!ENTITY linux-version "&linux-major-version;.&linux-minor-version;.&linux-patch-version;">
 <!--<!ENTITY linux-version "&linux-major-version;.&linux-minor-version;">-->
-<!ENTITY linux-size "77,813 KB">
+<!ENTITY linux-size "77,793 KB">
 <!ENTITY linux-url "&kernel;linux/kernel/v&linux-major-version;.x/linux-&linux-version;.tar.xz">
-<!ENTITY linux-md5 "72bd0bf0e773963217c89cddbf3e0048">
+<!ENTITY linux-md5 "5525ef4f6f577682d7ea2bf992aa6bcf">
 <!ENTITY linux-home "http://www.kernel.org/">
 <!-- measured for 3.9.0 / gcc-4.8.0 on x86_64 : minimum is
  allnoconfig extended for a hopefully-bootable build on desktop machine,
@@ -649,7 +649,7 @@
 
 <!ENTITY xml-parser-version "2.42_01">
 <!ENTITY xml-parser-size "236 KB">
-<!ENTITY xml-parser-url "http://search.cpan.org/CPAN/authors/id/T/TO/TODDR/XML-Parser-&xml-parser-version;.tar.gz">
+<!ENTITY xml-parser-url "http://cpan.metacpan.org/authors/id/T/TO/TODDR/XML-Parser-&xml-parser-version;.tar.gz">
 <!ENTITY xml-parser-md5 "a4650aebcc464bb91113c2c356da8210">
 <!ENTITY xml-parser-home "https://github.com/chorny/XML-Parser">
 <!ENTITY xml-parser-ch6-du "2.5 MB">
